week 04/词法语法.txt
InputElement ::= WhiteSpace | LineTerminator | Comment | Token

WhiteSpace ::= " " | "　" 

LineTerminator ::= "\n" | "\r"

Comment ::= SingleLineComment | MultilineComment
SingleLineComment ::= "/" "/" <any>*
MultilineComment ::= "/" "*" ([^*] | "*" [^/])* "*" "/"

Token ::= Literal | Keywords | Indentifier | Punctuator
Literal ::= NumberLiteral | BooleanLiteral | StringLiteral | NullLiteral
Keywords ::= "if" | "else" | "for" | "function" | ......
Punctuator ::= "+" | "-" | "*" | "/" | "{" | "}" | ......

Program ::= Statement+

Statement ::= ExpressionStatement | IfStatement
    | ForStatement | WhileStatement
    | VariableDeclaration | FunctionDeclaration | ClassDeclaration
    | BreakStatement | ContinueStatement | ReturnStatement | ThrowStatement
    | TryStatement | Block

IfStatement ::= "if" "(" Expression ")" Statement

Block = "{" Statement "}"

TryStatement ::= "try" "{" Statement+ "}" "catch" "(" Expression ")" "{" Statement+ "}"

ExpressionStatement ::= Expression ";"

Expression ::= AdditiveExpression

AdditiveExpression ::= MultiplicativeExpression
    | AdditiveExpression ("+" | "-") MultiplicativeExpression

MultiplicativeExpression ::= UnaryExpression
    | MultiplicativeExpression ("*" | "/") UnaryExpression

UnaryExpression ::= PrimaryExpression
    | ("+" | "-" | "typeof") PrimaryExpression

PrimaryExpression ::= "(" Expression ")" | Literal | Indentifier
